--- a/docente.html
+++ b/docente.html
@@ -44,7 +44,7 @@
     <p>
       <label>
         Número de afiliación
-        <input name="nafiliacion"
+        <input name="nafilacion"
           type="text" required>
       </label>
     </p>
