--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <script src="js/init.js">
   </script>
   <script type="module"
-    src="cmp/mi-nav.js">
+    src="cmp/nav.js">
     </script>
   <script type="module"
     src="cmp/mi-footer.js">
