--- a/index.html
+++ b/index.html
@@ -51,6 +51,24 @@
   
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+  <style>
+        /* Remove the navbar's default margin-bottom and rounded borders */
+        .navbar {
+            margin-bottom: 0;
+            border-radius: 0;
+        }
+
+        /* Add a gray background color and some padding to the footer */
+        footer {
+            background-color: #f2f2f2;
+            padding: 25px;
+        }
+
+        .control-label {
+            text-align: left !important;
+            /* !important added for priority in SO snippet. */
+        }
+    </style>
 </head>
 <body>
    <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
